--- a/index2.html
+++ b/index2.html
@@ -155,9 +155,7 @@
         }
 
         async function getBotResponse(messageInput) {
-            require('dotenv').config();
-            const apikey = process.env.API_KEY;
-
+            const apiKey = API_KEY;
             const url = 'https://api.openai.com/v1/chat/completions';
         
             const systemMessage = {
